# NeglectedRuralAtom

./: AGENTS.md  Cargo.toml  META_ENGINE_PLAN.md  README.md  app.js  fix_test.py  index.html  test_graph.js
.github/workflows/: build-wasm.yml
.jules/: bolt.md
agentic-kernel/: Cargo.toml
agentic-kernel/src/: lib.rs
agentic-kernel/src/bridge/: memory.rs  mod.rs
agentic-kernel/src/field/: kernel.rs
src/: business.rs  dom.rs  graph.rs  lib.rs  prompt.rs  scripting.rs  svg_generator.rs  telemetry.rs  vfs.rs
src/bridge/: memory.rs  mod.rs
src/command/: mod.rs
src/field/: data_worker.rs  environment_grid.rs  kernel.rs  message_bus.rs  mod.rs  soa.rs  spatial_grid.rs  tensor_logic.rs  vector_memory.rs
src/recursive/: meta.rs  mod.rs  orchestrator.rs  worker.rs
src/render/: agent_renderer.rs  gpu_buffer.rs  mod.rs
src/scripting/: engine.rs  meta_optimizer.rs  mod.rs
tests/: autonomy_tests.rs  dom_writer_tests.rs  graph_parallel_tests.rs  lumina_warp_tests.rs  meta_learning_tests.rs  render_tests.rs  stress_tests.rs  tensor_tests.rs  vfs_tests.rs  worker_event_tests.rs
