[package]
name = "agentic-kernel"
version = "0.1.0"
edition = "2021"
authors = ["You"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

# === LIBRARY BARU ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rhai = "1.25.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.72"
# ====================

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "CssStyleDeclaration",
  "Node",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["wee_alloc"]

[target.wasm32-unknown-unknown.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[dev-dependencies]
fastrand = "2.4.1"
